--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   height: 10rem;
   padding: 0.8rem 0 0.8rem 0.8rem;
   resize: none;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 16px;
   border-radius: 10px;
   box-sizing: border-box;
