Changed input text color to black

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   margin: 0.5rem 0 0.5rem 0;
   background: transparent;
   border: 2px solid gray;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 16px;
   width: 100%;
   border-radius: 10px;
